eks-platform/networking-ingress/manifests/service-backup.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: devops-sample-app-eks
    meta.helm.sh/release-namespace: devops-lab-eks
  creationTimestamp: "2026-10-02T00:03:42Z"
  labels:
    app.kubernetes.io/instance: devops-sample-app-eks
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: devops-sample-app
    environment: eks-dev
  name: devops-sample-app-eks-devops-sample-app
  namespace: devops-lab-eks
  resourceVersion: "5185"
  uid: 86891119-3b25-426c-9067-13ee214c7321
spec:
  clusterIP: 172.20.229.221
  clusterIPs:
  - 172.20.229.221
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: devops-sample-app-eks
    app.kubernetes.io/name: devops-sample-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
