eks-platform/networking-ingress/manifests/app-ingress-broken-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-sample-app-ingress
  namespace: devops-lab-eks
  labels:
    app: devops-sample-app
    environment: eks-dev
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: devops-sample-app-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wrong-service-name
                port:
                  number: 80
